# qplaywright

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  cpp-top-level-overlay-design.md  opencode.json  overlay-unification-report.md  pyproject.toml  setup.py
.claude/: settings.local.json
agent_cpp/: CMakeLists.txt  qplaywright_agent.h
docs/: accessibility_semantics.md  concurrency.md  custom_widgets.md  mcp.md  mcp_agent_ui_surface.md  mcp_end_state.md  mcp_end_state_schema.md  opencode.md  overlay_spec.md  snapshot_modes_visualization.html  tmp.h
docs/archives/: cpp-top-level-overlay-design.md  mcp-agent-ui-surface-v2-draft.md
examples/: __init__.py  demo_app.py  test_cpp_dialog_manager.py  test_datetime_input_demo.py  test_demo.py  test_dialog_mcp_demo.py  test_input_cursor_stability.py  test_mcp_cli_coordinate_demo.py  test_mcp_cpp_demo.py  test_mcp_demo.py  test_playwright_mcp_compat.py  test_playwright_mcp_cpp_compat.py  test_scroll_mcp_demo.py
examples/cpp_demo/: CMakeLists.txt  main.cpp
issues/: 2026-04-25-mcp-usability-improvements-plan.md  2026-05-07-issue-26-table-tree-support.md  2026-05-11-issue-27-code-review-improvements.md
issues/archives/: 2026-04-25-mcp-usability-improvements-plan.md  2026-04-25-mcp-usability-improvements.md  2026-04-25-qaction-crash-widget-tree-traversal.md
qplaywright/: __init__.py  _logging.py  errors.py  mcp_server.py  protocol.py
qplaywright/agent/: __init__.py  _selector.py  _server.py
qplaywright/cpp/: CMakeLists.txt  __init__.py  qplaywright_agent.h
qplaywright/sync_api/: __init__.py  _api.py  _connection.py  _locator.py
reference/: browser-use-analysis.md
tests/: test_click_api.py  test_connect_backoff.py  test_custom_widget_support.py  test_example_mcp_helpers.py  test_import_qt_qpointf.py  test_invoke_api.py  test_item_view_api.py  test_mcp_server.py  test_package_api.py  test_protocol_consistency.py
